build: housekeeping (#22)
* fix: support verified Discogs HTML dumps

* ci: run Discogs E2E on DSUB runners

* ci: avoid the shared Discogs uplink

* build: complete housekeeping

* fix: identify Discogs index requests

* fix: resolve dumps from checksum manifests